--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	links2004/WebSockets@^2.6.1
 	bblanchon/ArduinoJson@6.21.5
+	gyverlibs/GyverNTC@^1.5.5
+	tzapu/WiFiManager@^2.0.17
